Fixed commander name on tablet, and slideshow arrows

--- a/Node/PublicResources/commanderUI.css
+++ b/Node/PublicResources/commanderUI.css
@@ -48,7 +48,7 @@ h2, h3{
   }
 
   .prev{
-      right: 94%;
+      right: 96.5%;
   }
 
   .next {
