--- a/Node/PublicResources/commanderUITablet.css
+++ b/Node/PublicResources/commanderUITablet.css
@@ -58,7 +58,7 @@ h2, h3{
   }
 
   .prev{
-    right: 94%;
+    right: 91%;
   }
 
   .next {
@@ -111,6 +111,22 @@ h2, h3{
     padding: 14px 16px;
     text-decoration: none;
   }
+
+.commanderNameDiv {
+    float: left;
+    overflow: hidden;
+    height: 67.03px;/*To make the dropdown box the same size as the headerbar*/
+}  
+#commanderName {
+    font-size: 1.5em;
+    border: none;
+    outline: none;
+    color: white;
+    padding: 20.5px 16px;
+    background-color: inherit;
+    font-family: inherit; /* Important for vertical align on mobile phones */
+    margin: 0; /* Important for vertical align on mobile phones */
+}
 
 /* The dropdown container */
 .dropdown {
